feat: add report api
